--- a/Frontend/youRJube/package.json
+++ b/Frontend/youRJube/package.json
@@ -20,17 +20,19 @@
     "@angular/platform-browser": "~9.1.11",
     "@angular/platform-browser-dynamic": "~9.1.11",
     "@angular/router": "~9.1.11",
+    "angularx-social-login": "^3.2.0",
     "apollo-angular": "^1.10.0",
     "apollo-angular-link-http": "^1.11.0",
     "apollo-cache-inmemory": "^1.6.0",
     "apollo-client": "^2.6.0",
     "apollo-link": "^1.2.11",
+    "firebase": "^7.13.1",
     "graphql": "^14.6.0",
     "graphql-tag": "^2.10.0",
+    "ng-gapi": "0.0.93",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2",
-    "firebase": "^7.13.1"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.10",
