--- a/Frontend/youRJube/package.json
+++ b/Frontend/youRJube/package.json
@@ -12,11 +12,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.1.11",
+    "@angular/cdk": "^9.2.4",
     "@angular/common": "~9.1.11",
     "@angular/compiler": "~9.1.11",
     "@angular/core": "~9.1.11",
     "@angular/fire": "^6.0.2",
     "@angular/forms": "~9.1.11",
+    "@angular/material": "^9.2.4",
     "@angular/platform-browser": "~9.1.11",
     "@angular/platform-browser-dynamic": "~9.1.11",
     "@angular/router": "~9.1.11",
@@ -30,6 +32,7 @@
     "firebase": "^7.16.0",
     "graphql": "^14.6.0",
     "graphql-tag": "^2.10.0",
+    "mat-video": "^2.8.1",
     "ng-gapi": "0.0.93",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
